     [PR #3237]
   * Extended processing of `MAXCONN` setting to allow larger values than the
     operating system allows, by only waiting for that amount of Unix sockets
     or Windows `HANDLE`'s at a time, and moving on to another chunk.
     The system-provided value can be further limited by `NUT_SYSMAXCONN_LIMIT`
     environment variable (e.g. in tests). [#3302]
   * Added `configure --with-ssl-client-validation` toggle to expose the
     macro previously meant to be passed via `make` command line. [PR #3330,
     but beware issue #3329]

 - `upsdrvctl` tool updates:
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]
   * The global-level `debug_min` setting in `ups.conf` now also applies
     to bumping the debug verbosity of `upsdrvctl` tool. [#3276]
   * If we fail to stop a driver by signal (e.g. PID file was not saved),
     retry to `INSTCMD driver.exit` it by socket protocol. [#3277]
   * The NUT Integration Testing suite now also involves `upsdrvctl` to
     run one driver instance indirectly, helping make check-NIT` catch
     portability issues with different builds of the tool. [#2800, #3292]

 - `upslog` tool updates:
   * Updated `help()` and failure messages to suggest `-m '*,-'` for logging
     of all known local devices to stdout. [#3083, #2756]

 - `upsmon` client updates:
   * The `SHUTDOWNEXIT` option was not handled properly, and the requested
     long delays did not happen in practice. [issues #2133 and #3084, PR #3086]
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]
   * Introduced a `SHUTDOWN_HOSTSYNC` notification message, to report that
     the primary `upsmon` initiated the shutdown and has some secondaries
     to wait for first. [#3084]
   * Make sure an `FSD` notification is issued for each UPS when this primary
     `upsmon` instance sets it (and does not return to usual data processing